Revert "Fix: Adjust z-index for keyboard visibility (#163)"
This reverts commit dadce4ecba5508e4aa8b72117c3a8e426f92eec9.

--- a/frontend/src/components/BottomNav.module.css
+++ b/frontend/src/components/BottomNav.module.css
@@ -2,7 +2,7 @@
 
 .nav {
   position: fixed; /* ГЛАВНОЕ СВОЙСТВО */
-  z-index: 1; /* Низкий z-index, чтобы клавиатура была поверх меню */
+  z-index: 100; /* Ставим поверх всего остального контента */
   bottom: 0;
   left: 0;
   right: 0;
